fixed z-index

--- a/src/ui/CardModal.module.css
+++ b/src/ui/CardModal.module.css
@@ -5,7 +5,7 @@
   height: calc(var(--pageHeight) + 4px);
   width: 100%;
   background-color: var(--modalBackground);
-  z-index: 10;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
