--- a/src/ui/Header.module.css
+++ b/src/ui/Header.module.css
@@ -14,7 +14,7 @@
   );
   background-color: #0c366e;
   box-shadow: 0px 5px 5.8px -1px rgba(0, 0, 0, 0.39);
-  z-index: 99;
+  z-index: 4;
 }
 
 .headerNav {
